GPIO and led-blinker example support ATmega328p and ATmega32u4

--- a/avrkit/examples/led-blinker/arduino-uno/Makefile
+++ b/avrkit/examples/led-blinker/arduino-uno/Makefile
@@ -1,14 +1,14 @@
 MCU=atmega328p
 USB_PORT=/dev/ttyUSB0
 
-INCLUDES=../../include
+INCLUDES=../../../include
 
 .PHONY: clean upload
 
 all: main.hex
 
 %.o: %.c
-	avr-gcc -I$(INCLUDES) -Os -DF_CPU=16000000UL -mmcu=$(MCU) -c -o $@ $<
+	avr-gcc -I$(INCLUDES) -Os -DF_CPU=16000000UL -D__AVRKIT_$(MCU)__ -mmcu=$(MCU) -c -o $@ $<
 
 %.elf: %.o
 	avr-gcc -mmcu=$(MCU) $< -o $@
